# cpdir

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: clippy.yml  commitlint.yml  release-please.yml  release.yml  test.yml
src/: main.rs  walk_dir.rs
